<resources>
    //base buttons
    <string name="app_name">lab2demo</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="mem_clear">mc</string>
    <string name="mem_sum">m+</string>
    <string name="mem_sub">m-</string>
    <string name="mem_remove">mr</string>
    <string name="clear">C</string>
    <string name="backspace">del</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="percent">%</string>
    <string name="memory">M</string>

    //scientific buttons
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="one_div_x">1/x</string>
    <string name="x__squared">x²</string>
    <string name="x__cubed">x³</string>
    <string name="x__n">xʸ</string>
    <string name="x_fact">x!</string>
    <string name="root">√</string>
    <string name="n_root">ʸ√</string>
    <string name="e">e</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="pi">π</string>
    <string name="inv">INV</string>

    //scientific actions
    <string name="one_div_x_action">^(-1)</string>
    <string name="x__squared_action">^(2)</string>
    <string name="x__cubed_action">^(3)</string>
    <string name="x__n_action">^(</string>
    <string name="x_fact_action">!</string>
    <string name="root_action">sqrt(</string>
    <string name="n_root_action">^(1/</string>
    <string name="ln_action">ln(</string>
    <string name="log_action">log(</string>
    <string name="sin_action">sin(</string>
    <string name="cos_action">cos(</string>
    <string name="tan_action">tan(</string>
    <string name="pi_action">pi</string>
    <string name="deg">DEG</string>
    <string name="rad">RAD</string>

    //inverted mode
    <string name="asin_button">sin⁻¹</string>
    <string name="acos_button">cos⁻¹</string>
    <string name="atan_button">tan⁻¹</string>
    <string name="log_inv_button">10ˣ</string>
    <string name="ln_inv_button">eˣ</string>
    <string name="asin">asin(</string>
    <string name="acos">acos(</string>
    <string name="atan">atan(</string>
    <string name="log_inv">10^(</string>
    <string name="ln_inv">e^(</string>
</resources>
