<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ButtonsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:rowCount="6"
    android:columnCount="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/one"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:id="@+id/button2"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/two"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_column="2"
            android:layout_row="4"
            android:text="@string/three"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/four"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/five"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:id="@+id/button6"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/six"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/seven"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/eight"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/nine"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button0"
            android:layout_column="1"
            android:layout_row="5"
            android:text="@string/zero"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_sum"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/sum"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:id="@+id/button_sub"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/colorAccent"
            android:text="@string/sub"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_mul"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/mul"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_div"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/div"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_clear"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/clear"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_erase"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/backspace"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_mem_clear"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/mem_clear"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorAccent"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_mem_sum"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/mem_sum"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorAccent"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_mem_sub"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/mem_sub"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorAccent"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_mem_replace"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/mem_remove"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorAccent"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_perc"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/percent"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_dot"
            android:layout_column="2"
            android:layout_row="5"
            android:text="@string/dot"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="18sp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_eq"
            android:layout_column="3"
            android:layout_row="4"
            android:layout_gravity="fill_vertical"
            android:layout_columnWeight="1"
            android:layout_rowSpan="2"
            android:text="@string/equals"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorPrimary"
            android:textSize="18sp"
            android:padding="30dp"/>
</GridLayout>